@@ -23,7 +23,12 @@ else {
 				<td align="left" valign="middle" colspan="2">
 					<img src="themes/<?php echo $theme ?>/img/logo.gif" width="153" height="47" alt="Logo" />
 					<?php
-					if (!empty($domain) && !empty($user))
+					$pref_email_address = getPref($prefs_dir, $user, 'email_address');
+					if ($pref_email_address != '')
+					{ ?>
+						&nbsp;&nbsp;<font class="login"><b><?php echo $pref_email_address ?></b></font>
+					<?php }
+					else if (!empty($domain) && !empty($user)) 
 					{ ?>
 						&nbsp;&nbsp;<font class="login"><b><?php echo $user.'@'.$domain ?></b></font>
 					<?php } ?>
